conexión con bdd

--- a/proyecto/templates/index.html
+++ b/proyecto/templates/index.html
@@ -25,8 +25,8 @@
     <br>
 
         <div id="reservas">
-            {% if reservas %} 
-                {% for r in reservas %}
+            {% if reserva %} 
+                {% for r in reserva %}
                     <p>{{ r }}</p>
                 {% endfor %}
             {% endif %}
