--- a/proyecto/frontend/gestion-salas/src/components/App.css
+++ b/proyecto/frontend/gestion-salas/src/components/App.css
@@ -2,15 +2,15 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;       /* ocupa exactamente el viewport */
-  overflow-x: hidden; /* evita scroll horizontal */
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 100%;       
+  overflow-x: hidden; 
+  font-family: 'TASA Explorer';
   background: #f6f6f6;
 }
 
 .inicio {
   width: 100%;
-  height: 100%; /* 👈 en vez de 100vh */
+  height: 100%; 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -68,6 +68,16 @@ html, body {
   color: rgb(5, 5, 71);
 }
 
+.titulo option {
+  font-family: 'TASA Explorer';
+}
+
+.titulo select {
+  font-family: 'TASA Explorer';
+}
+
+
+
 .datos input {
   margin-top: 6px;
   padding: 10px;
@@ -76,12 +86,14 @@ html, body {
   border: 1px solid #cccccc;
   background: #e1dfdf;
   color: #000000;
+  font-family: 'TASA Explorer';
   outline: none;
   transition: 0.2s;
 }
 
 .datos input::placeholder {
   color: #6f6f6f;
+  font-family: 'TASA Explorer';
 }
 
 .datos input:focus {
@@ -94,6 +106,7 @@ button {
   padding: 12px;
   background-color: rgb(211, 254, 213);
   color: rgb(5, 5, 71);
+  font-family: 'TASA Explorer';
   border: none;
   border-radius: 8px;
   font-size: 15px;
