--- a/proyecto/frontend/gestion-salas/src/index.css
+++ b/proyecto/frontend/gestion-salas/src/index.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 *,
 *::before,
 *::after {
@@ -9,8 +8,8 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;       /* ocupa exactamente el viewport */
-  overflow-x: hidden; /* evita scroll horizontal */
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 100%;      
+  overflow-x: hidden;
+  font-family: 'TASA Explorer';
   background-color: #f6f6f6;
 }
