--- a/proyecto/frontend/gestion-salas/src/components/App.css
+++ b/proyecto/frontend/gestion-salas/src/components/App.css
@@ -18,6 +18,10 @@ html, body {
   background: #f6f6f6;
 }
 
+h1 {
+  color: rgb(5, 5, 71);
+}
+
 #barraBienvenida {
   width: 100%;
   background-color: rgb(211, 254, 213);
